these now compile with pdflatex

--- a/notes.tex
+++ b/notes.tex
@@ -9,7 +9,7 @@
 
 
 \documentclass[a4paper]{article}
-\usepackage{alltt,theapa,egg,pstimes,amstex}
+\usepackage{alltt,theapa,egg,amsmath}
 
 \newcommand{\zbar}{\bar{z}}
 \newcommand{\ztilde}{\tilde{z}}
