It compiles once I remove the figures (which are missing)

--- a/theprog.tex
+++ b/theprog.tex
@@ -8,7 +8,7 @@
 %
 
 \documentclass[a4paper]{article}
-\usepackage{alltt,theapa,pstimes,amstex,moreverb,psfig,mathptm}
+\usepackage{alltt,theapa,amsmath,moreverb,mathptm}
 
 \newcommand{\zbar}{\bar{z}}
 \newcommand{\ztilde}{\tilde{z}}
@@ -18,6 +18,8 @@
 \newcommand{\dlkernel}{\bar{\Phi'}}
 
 \newcommand{\pdiff}[2]{ \frac{\partial #1}{\partial #2}}
+
+\providecommand{\psfig}[1]{}
 
 \begin{document}
 
